# cut_3d_game

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: commercialization-plan.md  native_manual_smoke.md  profile-schema.md  project-structure.md  release-v1.0.0.zh-CN.md  troubleshooting.md
docs/dev/: README.md  continuation-guide.md  progress.md
docs/superpowers/plans/: 2026-05-26-comfortcues-ui-logic-refactor.md
native/: ComfortCues.pro  resources.qrc
native/include/: app_controller.h  app_state.h  cc_core.h  display_state.h  input_source.h  models.h  overlay_utils.h  profile_binding.h  profile_store.h  runtime_service.h  status_text.h  window_tracker.h
native/src/: app_controller.cpp  app_state.cpp  cc_cues.c  cc_signal.c  display_state.cpp  input_source.cpp  main.cpp  overlay_utils.cpp  profile_binding.cpp  profile_store.cpp  runtime_service.cpp  status_text.cpp  window_tracker.cpp
native/tests/: test_cc_core.c
packaging/python/: ComfortCues.spec
profiles/: app-state.json  cs2.toml  default.toml  sample-third-person.toml
scripts/: build_native.ps1  build_single_exe.ps1  check_native_toolchain.ps1  deploy_native.ps1  make_release.ps1  manual_native_runtime.ps1  smoke_native_runtime.ps1  summarize_manual_runtime.ps1
src/comfort_cues/: __init__.py  app.py  app_state.py  config.py  main.py  models.py  runtime.py
src/comfort_cues/controller/: __init__.py  display.py  (+3 more)
tests/: test_app_controller.py  test_app_state.py  test_config.py  test_cues.py  test_overlay.py  test_qml_runtime.py  test_runtime.py  test_signal.py  test_window_tracker.py
(+19 files in other folders)
