[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "comfort-cues"
version = "1.0.0"
description = "A compliant Windows comfort overlay for reducing 3D motion discomfort."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "PySide6>=6.8,<6.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
]

[project.scripts]
comfort-cues = "comfort_cues.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/comfort_cues"]

[tool.hatch.build.targets.wheel.force-include]
"src/comfort_cues/ui/qml" = "comfort_cues/ui/qml"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
